style: stop body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ html {
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
   background-color: #fcfafc;
   width: 100%;
   height: 100%;
